Add console path to files input